--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@prisma/client": "6.19.0",
-    "apollo-server-express": "latest",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^6.0.0",
     "cors": "latest",
     "dotenv": "latest",
     "express": "latest",
-    "graphql": "latest"
+    "graphql": "^16.12.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "latest",
