--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "node": ">=16"
   },
   "dependencies": {
+    "@graphql-tools/merge": "^9.1.7",
     "@prisma/client": "6.19.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "latest",
     "dotenv": "latest",
     "express": "latest",
